<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="computer">computer</string>
    <string name="o">O</string>
    <string name="you">You</string>
    <string name="x">X</string>
    <string name="ai">AI</string>
    <string name="player_2">Player 2</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="multi_player">Multi Player</string>
    <string name="single_player">Single Player</string>
    <string name="medium">Medium</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="vs">VS</string>
    <string name="play">Play</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="congataltaions">Congataltaions...</string>
    <string name="x_is_win">X is Win</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_1">Player 1</string>
</resources>