<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/title_textStyle"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="28sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/line" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:background="@drawable/icon_bg"
        android:src="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/multy"
        style="@style/btn_style"
        android:layout_width="match_parent"
        android:text="@string/multi_player" />

    <Button
        android:id="@+id/single"
        style="@style/btn_style"
        android:layout_width="match_parent"
        android:text="@string/single_player" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2602459603500864/2629976342" />

</LinearLayout>