<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


            <TextView
                style="@style/txt_textStyle"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rubik_vinyl_regular"
                android:text="@string/app_name"
                android:textSize="24sp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/line" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="ca-app-pub-2602459603500864/2629976342" />


        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/multi_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/person_icon" />

                <TextView
                    style="@style/txt_textStyle"
                    android:text="@string/vs" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/person_icon"
                    app:tint="#ffee00" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/single_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/person_icon" />

                <TextView
                    style="@style/txt_textStyle"
                    android:text="@string/vs" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/computer_icon"
                    app:tint="#ffee00" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/rate_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/star_rate_icon" />

                    <TextView
                        style="@style/txt_textStyle2"
                        android:text="@string/rate_us"
                        android:textSize="28sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/share_icon" />

                    <TextView
                        style="@style/txt_textStyle2"
                        android:text="@string/share"
                        android:textSize="28sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>